--- a/gene_data.ipynb
+++ b/gene_data.ipynb
@@ -104,7 +104,15 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['age_0', 'age_1', 'age_2', 'age_3', 'age_4', 'age_5', 'age_6', 'age_7', 'age_8', 'age_9', 'gender_0', 'gender_1']\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "sample_df = sample_df.sample(frac=1).reset_index(drop=True)\n",
